--- a/css/app.css
+++ b/css/app.css
@@ -14767,8 +14767,8 @@ p {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("fonts/font-awesome/fontawesome-webfont.eot?v=4.7.0");
-  src: url("fonts/font-awesome/fontawesome-webfont.eot?v=4.7.0#iefix") format("embedded-opentype"), url("fonts/font-awesome/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("fonts/font-awesome/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("fonts/font-awesome/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("fonts/font-awesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+  src: url("fonts/fontawesome-webfont.eot?v=4.7.0");
+  src: url("fonts/fontawesome-webfont.eot?v=4.7.0#iefix") format("embedded-opentype"), url("fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 .fa {
@@ -17109,6 +17109,7 @@ p {
 
 body {
   background: #eeeeee;
+  height: 100%;
   z-index: 9; }
   body:before {
     content: '';
@@ -17133,7 +17134,8 @@ body {
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     border-radius: 4px;
-    margin-bottom: 30px; }
+    margin-bottom: 30px;
+    overflow-y: scroll; }
   body footer {
     background-color: #ffffff;
     padding: 20px;
@@ -17200,7 +17202,8 @@ footer .brand-details .footer-logo {
   -webkit-border-radius: 4px 4px 0 0;
   -moz-border-radius: 4px 4px 0 0;
   -ms-border-radius: 4px 4px 0 0;
-  border-radius: 4px 4px 0 0; }
+  border-radius: 4px 4px 0 0;
+  font-size: 24px; }
 .sec-title-desc p {
   border-top: #cccccc solid 3px;
   -webkit-border-radius: 0 0 4px 4px;
